Fixed dark mode bugs

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,20 +6,6 @@ body {
         sans-serif;
 }
 
-@media (prefers-color-scheme: light) {
-    html,
-    body {
-        background-color: var(--chakra-colors-gray-50);
-    }
-}
-
-@media (prefers-color-scheme: dark) {
-    html,
-    body {
-        background-color: var(--chakra-colors-gray-800);
-    }
-}
-
 a {
     color: inherit;
     text-decoration: none;
